--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abukar's Beanie Shop</title>
+    <title>Shopabu</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,18 +39,18 @@
 <body>
 
     <header>
-        <h1>Abukar's Beanie Shop</h1>
+        <h1>Shopabu</h1>
     </header>
 
     <section>
         <h2>Featured Product</h2>
         <p>Canada Goose Beanie</p>
         <p>Price: $55 each</p>
-        <button>Add to Cart</button>
+        <button>Buy</button>
     </section>
 
     <footer>
-        <p>&copy; 2023 Abukar's Beanie Shop. All rights reserved.</p>
+        <p>&copy; 2023 Shopabu. All rights reserved.</p>
     </footer>
 
 </body>
